# Blaze

./: CLAUDE.md  Cargo.toml  README.md
.claude/skills/add-guarantee/: SKILL.md
.claude/skills/bench-and-readme/: SKILL.md
.claude/skills/grow-language/: SKILL.md
.claude/skills/verify/: SKILL.md
blaze-ir/: Cargo.toml
blaze-ir/src/: db.rs  diag.rs  ir.rs  lib.rs  lower.rs
blaze-ir/tests/: incremental.rs
blaze-jit/: Cargo.toml
blaze-jit/examples/: agent_loop.rs  bench_calls.rs  bench_canary.rs  bench_reload.rs  bench_vs_interpreter.rs  live.blaze  live.rs  run.rs
blaze-jit/examples/living_service/: dashboard.rs  http.rs  main.rs  rules.blaze  service.rs
blaze-jit/src/: abi.rs  codegen.rs  engine.rs  lib.rs  live.rs  query.rs
blaze-jit/tests/: agent_loop.rs  canary.rs  floats.rs  jit.rs  journal.rs  live.rs  living_service.rs  metrics.rs
blaze-parse/: Cargo.toml
blaze-parse/src/: ast.rs  lexer.rs  lib.rs  parser.rs  syntax.rs
docs/: index.html  living_service.tape  website-prompt.md
