[package]
name = "blaze-jit"
description = "DevIR -> Cranelift codegen and in-memory hot-swap execution harness."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
salsa.workspace = true
blaze-ir.workspace = true
blaze-parse.workspace = true
cranelift-codegen.workspace = true
cranelift-frontend.workspace = true
cranelift-jit.workspace = true
cranelift-module.workspace = true
cranelift-native.workspace = true
target-lexicon.workspace = true
libc.workspace = true

# Bench-only: an embedded AST interpreter to measure Blaze's native JIT dispatch
# against — the honest apples-to-apples baseline for "how much faster than an
# interpreter is a hot-swapped native function?" Used solely by
# `examples/bench_vs_interpreter.rs`; not part of the library's dependency graph.
[dev-dependencies]
rhai = "1"
